Thu May  8 14:20:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Setting a minimum total duration.

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:

          Cleanup logging.

        * tests/DCPS/ManyToMany/subscriber.cpp:

          Polling readers at a set interval.

Thu May  8 13:50:29 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Added printing out log files content when tests fail.

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Cleaned up logging.

Wed May  7 21:06:22 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Added timestamps for debugging.

        * tests/DCPS/ManyToMany/run_test.pl:

          Increased time to wait for kill.

Wed May  7 18:09:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed multicast to work with multiple participants in one process.
          Added map keyed on the local peer (domain participant) instead of
          having one client and server links for all local peers.

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:

          Added passing the local peer to pending_connection.

        * tests/DCPS/ManyToMany/run_test.pl:

          Turned off Built in Topics.

Fri May  2 20:21:04 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ConfigTransports/run_test.pl:

          Increase process timeout to 30 seconds (from 5).
